[package]
name = "socket-burst-dampener"
version = "0.1.0"
authors = ["Zac Medico <zmedico@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "", features = ["unstable"] }
clap = ""
libc = ""
log = ""
nix = ""
tokio = { version = "", features = ["full"] }
