[package]
name = "socket-burst-dampener"
version = "0.1.0"
authors = ["Zac Medico <zmedico@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "~0.99.12", features = ["unstable"] }
clap = "~2.34.0"
libc = "~0.2.158"
log = "~0.4.22"
nix = "~0.26.4"
tokio = { version = "~0.3.7", features = ["full"] }
